--- a/survey-form/styles.css
+++ b/survey-form/styles.css
@@ -2,6 +2,8 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    background-image: url(assets/tecno-background.jpg);
+    
 }
 
 h1 {
@@ -10,23 +12,41 @@ h1 {
 
 h1, p{
     text-align: center;
-    font-family: Gill Sans
+    font-family: Gill Sans;
+    color: white;
 }
 
 fieldset{
     margin-bottom: 20px;
+    border-radius: 10px;
+    background-color: rgba(27, 81, 115, 0.8);
+    border-color: rgb(0, 208, 255);
 }
 
 form {
     max-width: 500px;
     margin: 0 auto;
-    background-color: rgba(12, 27, 99, 0.8);
+    background-color: rgba(45, 141, 201, 0.8);
+    padding: 20px;
+    border-radius: 30px;
 }
 
 label {
     display: flex;
     align-items: center;
     margin-bottom: 15px; /* Espacio entre labels */
+    margin-top: 15px;
+    color:rgba(255, 255, 255, 0.8)
+}
+
+.header{
+    background-color: rgba(20, 63, 89, 0.8);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 input, select, textarea {
@@ -66,6 +86,12 @@ button[type="submit"] {
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 30px;
+    margin: 20px auto;
+    display: block;
+    font-size: 1rem;
+    font-family: Arial, sans-serif;
+    width: 40%;
 }
 
 button[type="submit"]:hover {
